--- a/styles.css
+++ b/styles.css
@@ -1,70 +1,76 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@500&display=swap');
 
 * {
-	justify-content: center;
-	text-align: center;
-	font-family: pacifico;
+  justify-content: center;
+  text-align: center;
+  font-family: pacifico;
 }
-tttttttttttttrrrryyyyuuuuıııoooppüüğlm   <<:..
+
 body {
-	height: 100vh;
-	background-image: linear-gradient(#dc2424, #4a569d);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
+  height: 100vh;
+  background-color: #00dbde;
+  background-image: linear-gradient(90deg, #00dbde 0%, #fc00ff 100%);
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+h1 {
+  color: white;
 }
 
 .mainpageimages {
-	width: 82em;
-	height: 200px;
-	display: flex;
-	align-items: center;
+  width: 82em;
+  height: 200px;
+  display: flex;
+  align-items: center;
 }
 
 .mainpageitem {
-	border-radius: 100px;
-	width: 200px;
-	height: 200px;
-	object-fit: cover;
-	padding: 5px;
-	filter: grayscale(80%);
+  border-radius: 100px;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  padding: 5px;
+  filter: grayscale(80%);
 }
 
 .mainpageitem:hover {
-	width: 220px;
-	height: 220px;
-	border-radius: 120px;
-	filter: grayscale(0%);
+  width: 220px;
+  height: 220px;
+  border-radius: 120px;
+  filter: grayscale(0%);
 }
 
 a {
-	color: white;
-	font-size: 20px;
+  color: white;
+  font-size: 20px;
 }
 
 a:hover {
-	font-size: 22px;
-	color: lightblue;
+  font-size: 22px;
+  color: rgb(28, 17, 49);
 }
 ul {
-	list-style-type: none;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 #bodyitems {
-	width: auto;
-	height: auto;
+  width: auto;
+  height: auto;
 }
 .fooditems {
-	width: auto;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	display: flex;
+  width: auto;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
 }
 .pageitem {
-	width: 300px;
-	border-radius: 150px;
-	padding: 20px;
+  width: 300px;
+  border-radius: 150px;
+  padding: 20px;
 }
